# kuzushiji-column

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
docs/: segmentation.md
static/: annotation_colors.js  app.js  style.css
templates/: index.html
tests/: test_annotation_alignment.py  test_annotation_colors.py  test_huggingface_update.py  test_image_cache.py  test_model_status.py  test_prediction_models.py  test_server_startup.py
